--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@
         </div>
     </div>
 
+    <!-- Image of location/map -->
+    <img src="map.jpg" style="width:100%">
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     
 </body>
