--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -46,7 +46,7 @@
         </form>
     </div>
 
-    <div class="container-fluid">
+    <div id="about" class="container-fluid">
         <div class="row">
           <div class="col-sm-8">
             <h2>About Company Page</h2>
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <div class="container-fluid text-center">
+    <div id="services" class="container-fluid text-center">
         <h2>SERVICES</h2>
         <h4>What we offer</h4>
         <br />
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-    <div class="container-fluid text-center bg-grey">
+    <div id="portfolio" class="container-fluid text-center bg-grey">
         <h2>Portfolio</h2>
         <br />
         <h4>What we have created</h4>
@@ -173,7 +173,7 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div id="pricing" class="container-fluid">
         <div class="text-center">
           <h2>Pricing</h2>
           <h4>Choose a payment plan that works for you</h4>
@@ -239,7 +239,7 @@
         </div>
     </div>
 
-    <div class="container-fluid bg-grey">
+    <div id="contact" class="container-fluid bg-grey">
         <h2 class="text-center">CONTACT</h2>
         <div class="row">
           <div class="col-sm-5">
